# autotools

./: .gitignore  .travis.yml  CPPLINT.cfg  Makefile.am  Pipfile  README.md  autogen.sh  configure.ac  whine.pc.in
pkg/: debian.in  postinst.sh
src/: hello.c
src/whine/: whine.c  whine.h
test/whine/: whine_test  whine_test.c
